Fix line spacing for ideas

--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -7,6 +7,10 @@
 	line-height: 200%;
 }
 
+.idea-entry .content {
+	line-height: 150%;
+}
+
 .multi-column {
 	-moz-column-count: 3;
   -moz-column-gap: 20px;
